--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,35 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+body {
   min-height: 100vh;
+}
+
+#root {
+  width: 100%;
+  height: 100vh;
+}
+
+.products, .services, .sign-up {
+  margin-top: 7vw;
+  width: 100%;
+  height: 100%;
+  margin: auto;
+  text-align: center;
+  font-size: 10vw;
   display: flex;
-  flex-direction: column;
+  place-content: center;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  color: #fff;
+  text-shadow: 4px 8px 10px #000;
+  background-size: cover;
 }
 
-.App-link {
-  color: #61dafb;
+.products {
+  background: url(./assets/images/img-4.jpg) no-repeat center;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.services {
+  background: url(./assets/images/img-9.jpg) no-repeat center;
+}
+
+.sign-up {
+  background: url(./assets/images/img-8.jpg) no-repeat center;
 }
